# portfolio-service

./: Dockerfile  config.json  config.py  pyproject.toml
app/: __init__.py
app/models/: __init__.py  basic_info.py  careers.py  educations.py  projects.py  skills.py
app/routes/: __init__.py  api.py  main.py
deploy/portfolio/: Chart.yaml  values.yaml
deploy/portfolio/templates/: deployment.yaml  service.yaml
migrations/versions/: 0afece8ae61a_project_datatype.py  7e9273334c90_recreate_tables.py  c05d29816bab_initial_migration.py  e44489471b1b_recreate_tables.py
static/css/: additional_info.css  ruo_portfoilo.css  ruo_portfolio.css  update_info.css
static/js/: additional_info.js  basic_info.js  ruo_portfolio.js  update_info.js
templates/: additional_info.html  basic_info.html  main.html  ruo_portfolio.html  update_info.html
