[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["ruo <comsa333@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
flask-sqlalchemy = "^3.0.5"
psycopg2-binary = "^2.9.7"
flask-migrate = "^4.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
